@@ -1,3 +1,5 @@
+    - Table will now scroll to keep the currently edited entry visible if an edit leads to
+      the entry getting sorted to a different position.
     - Reworked author and editor handling in Docbook export. Added Docbook XML header.
     - Fixed bug in writing of metadata on Windows. For certain metadata lengths newlines would be
       messed up after the metadata comment in a bib file.
